--- a/wp7-donor/Donor/App.xaml
+++ b/wp7-donor/Donor/App.xaml
@@ -204,7 +204,16 @@
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="Foreground" Value="#DEAD86"/>
         </Style>
-		
+
+        <Style x:Key="Text24pxC0A89A" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Segoe WP Regular"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="24"/>
+            <Setter Property="Foreground" Value="#FFC0A89A"/>
+        </Style>
+
+        
+
         <Style x:Key="TextBox1" TargetType="TextBox">
             <Setter Property="Background" Value="#FF4F3B34"/>
             <Setter Property="BorderBrush" Value="#FF4F3B34"/>
