--- a/wp7-donor/Donor/HelpPage.xaml
+++ b/wp7-donor/Donor/HelpPage.xaml
@@ -209,16 +209,28 @@ Visibility="Collapsed" ScrollViewer.VerticalScrollBarVisibility="Disabled">     
                 <Grid Margin="0,30,0,0">  
                     <ScrollViewer Height="600">                 
                     <StackPanel>
-                            <msp:HTMLViewer 
-							Foreground="#FF847168"
-							FontSize="24"
-							ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                &lt;ul&gt;
+<!--                                &lt;ul&gt;
 &lt;li&gt;10–15 минут посидите спокойно и, если вы хорошо себя чувствуете (не испытываете слабости или головокружения), пройдите в буфет и выпейте сладкий чай.&lt;/li&gt;
 &lt;li&gt;Если вы почувствовали головокружение, обратитесь к медперсоналу. Самый простой способ помочь себе – лечь и поднять ноги выше головы или сесть и опустить голову между колен. Ни в коем случае не пытайтесь идти или вести машину, если у вас кружится голова!&lt;/li&gt;
 &lt;li&gt;В течение 3–4 часов не снимайте повязку и старайтесь ее не мочить. Это убережет вас от возникновения синяка (если синяк появился, на ночь сделайте повязку с гепариновой мазью и/или троксевазином).&lt;/li&gt;                          &lt;li&gt;Избегайте в этот день тяжелых физических и спортивных нагрузок, подъема тяжестей, в том числе и сумок с покупками.&lt;/li&gt;
 &lt;li&gt;Полноценно и регулярно питайтесь в течение 2 суток после донации и выпивайте не менее 2 литров жидкости в день: соки, воду, некрепкий чай (алкоголь не рекомендуется).&lt;/li&gt;
-&lt;/ul&gt;
+&lt;/ul&gt;-->
+                            <msp:HTMLViewer 
+							Foreground="#FF847168"
+							FontSize="24"
+							ScrollViewer.VerticalScrollBarVisibility="Disabled">
+&lt;p&gt;Вы&amp;nbsp;можете сдать кровь, если вы:&lt;/p&gt;
+&lt;br/&gt;
+&lt;p&gt;
+&lt;ul&gt;
+&lt;li&gt;не&amp;nbsp;употребляли алкоголь за&amp;nbsp;последние 48 часов;&lt;/li&gt;
+&lt;li&gt;не&amp;nbsp;принимали анальгетики за&amp;nbsp;последние 72 часа;&lt;/li&gt;
+&lt;li&gt;для женщин: после окончания менструации прошло 5 дней;&lt;/li&gt;
+&lt;li&gt;вам не&amp;nbsp;удаляли зуб за&amp;nbsp;последние 10 дней;&lt;/li&gt;
+&lt;li&gt;не&amp;nbsp;принимали антибиотики за&amp;nbsp;последние 2 недели;&lt;/li&gt;
+&lt;li&gt;не&amp;nbsp;болели ангиной, гриппом, ОРВИ за&amp;nbsp;последний месяц;&lt;/li&gt;
+&lt;li&gt;у&amp;nbsp;вас не&amp;nbsp;было обострения аллергии за&amp;nbsp;последние 2&amp;nbsp;месяца.&lt;/li&gt;
+&lt;/ul&gt;&lt;/p&gt;
                             </msp:HTMLViewer>
                         </StackPanel>
                     </ScrollViewer>
