--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -204,12 +204,12 @@
                         <TextBlock 
 						Style="{StaticResource Text24pxCBB2A3}"
 						Text="Введите e-mail" />
-                    <TextBox x:Name="email" Text="m0rg0t.Anton@gmail.com" Background="#FF4F3B34" BorderBrush="#FF4F3B34" Foreground="#FFCBB2A3" />
+                    <TextBox x:Name="email" Text="" Background="#FF4F3B34" BorderBrush="#FF4F3B34" Foreground="#FFCBB2A3" />
                     <TextBlock 
 					Style="{StaticResource Text24pxCBB2A3}"
 					Text="Введите пароль" />
                     <PasswordBox 
-					x:Name="password" Password="slucladr" 
+					x:Name="password" Password="" 
 					Background="#FF4F3B34" 
 					BorderBrush="#FF4F3B34" 
 					Foreground="#FFCBB2A3" />
