--- a/wp7-donor/Donor/StationsSearch.xaml
+++ b/wp7-donor/Donor/StationsSearch.xaml
@@ -71,7 +71,7 @@
         <ListBox 
 		VerticalAlignment="Top"
 		Margin="0,0,0,0"
-		Name="StationsList" ItemsSource="{Binding Stations.Items}" 
+		Name="StationsList" ItemsSource="{Binding Stations.DistanceItems}" 
 		SelectionChanged="StationsList_SelectionChanged" Tap="StationsList_Tap">
             <ListBox.ItemTemplate>
                 <DataTemplate>
